--- a/.github/workflows/sitemap-generator.yml
+++ b/.github/workflows/sitemap-generator.yml
@@ -20,14 +20,35 @@ jobs:
           # 使用 sed 命令查找 id 为 "last-updated-date" 的 span 标签，并将日期填入
           sed -i 's|<span id="last-updated-date">.*</span>|<span id="last-updated-date">'"$LAST_UPDATED_DATE"'</span>|' index.html
 
-      # 步骤2：生成站点地图 (使用新的、更可靠的插件)
-      - name: Generate sitemap
-        # !!! 改动在这里：我们换了一个全新的插件 !!!
-        uses: peter-murray/sitemap-generator-action@v4
-        with:
-          # 这个插件会自动扫描您的仓库来生成 sitemap.xml
-          # 它会自动忽略 .github, .git 等文件夹
-          search_path: ./
+      # 步骤2：用内置脚本生成站点地图 (不再依赖任何第三方插件)
+      - name: Generate sitemap with shell script
+        run: |
+          # 创建 sitemap.xml 文件并写入头部信息
+          echo '<?xml version="1.0" encoding="UTF-8"?>' > sitemap.xml
+          echo '<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">' >> sitemap.xml
+          
+          # 查找仓库中所有的 .html 文件
+          find . -name "*.html" | while read -r file; do
+            # 排除谷歌验证文件
+            if [[ "$file" == *google*.html ]]; then
+              continue
+            fi
+
+            # 构建完整的URL地址
+            LOC="https://tl3049.github.io/$(echo "$file" | sed 's|./||')"
+            # 获取文件的最后修改日期
+            LASTMOD=$(date -r "$file" +%Y-%m-%d)
+            
+            # 将页面的信息写入 sitemap.xml
+            echo '  <url>' >> sitemap.xml
+            echo "    <loc>$LOC</loc>" >> sitemap.xml
+            echo "    <lastmod>$LASTMOD</lastmod>" >> sitemap.xml
+            echo '  </url>' >> sitemap.xml
+          done
+          
+          # 写入文件尾部信息
+          echo '</urlset>' >> sitemap.xml
+          echo "Sitemap generated successfully!"
 
       # 步骤3：提交 index.html 和 sitemap.xml 两个文件的更改
       - name: Commit and push changes
